--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -91,7 +91,8 @@
   <header>
     <h1>Premium Chess Set</h1>
     <p>Luxury handcrafted chess pieces for champions</p>
-    <a href="#contact" class="btn">Order Now</a>
+    <!-- WhatsApp Order Button -->
+    <a href="https://wa.me/1234567890?text=Hello!%20I%20want%20to%20order%20a%20Premium%20Chess%20Set." target="_blank" class="btn">Order Now via WhatsApp</a>
   </header>
 
   <div class="section">
@@ -112,16 +113,16 @@
   </div>
 
   <div class="section" id="contact">
-    <h2>Place Your Order</h2>
-    <form>
+    <h2>Join Our Chess Club / Order by Email</h2>
+    <form action="https://formspree.io/f/your-form-id" method="POST">
       <label for="name">Name</label>
-      <input type="text" id="name" placeholder="Enter your name">
+      <input type="text" name="name" id="name" placeholder="Enter your name" required>
 
       <label for="email">Email</label>
-      <input type="email" id="email" placeholder="Enter your email">
+      <input type="email" name="_replyto" id="email" placeholder="Enter your email" required>
 
       <label for="message">Message</label>
-      <textarea id="message" rows="4" placeholder="Your message or order details"></textarea>
+      <textarea name="message" id="message" rows="4" placeholder="Your message or order details"></textarea>
 
       <button type="submit">Send Order</button>
     </form>
