--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
   <div class="section" id="contact">
     <h2>Join Our Chess Club / Order by Email</h2>
-    <form action="https://formspree.io/f/your-form-id" method="POST">
+    <form action="https://formspree.io/f/xdklwrde" method="POST">
       <label for="name">Name</label>
       <input type="text" name="name" id="name" placeholder="Enter your name" required>
 
@@ -133,3 +133,4 @@
   </footer>
 </body>
 </html>
+
