--- a/index.html
+++ b/index.html
@@ -5,33 +5,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Premium Chess Set</title>
   <style>
-    /* Body and background */
     body {
       margin: 0;
       font-family: 'Arial', sans-serif;
-      background-image: url('dark-wood.jpg'); /* dark wood texture */
+      background-image: url('dark-wood.jpg');
       background-size: cover;
       background-repeat: no-repeat;
       background-attachment: fixed;
-      color: #f4e1b6; /* light gold text */
+      color: #f4e1b6; /* gold text */
     }
 
-    /* Header */
     header {
       text-align: center;
       padding: 80px 20px;
-      background: rgba(30, 20, 20, 0.8); /* semi-transparent overlay */
+      background: rgba(30, 20, 20, 0.8);
     }
     header h1 {
       font-size: 3em;
       margin-bottom: 10px;
-      color: #f4e1b6; /* gold */
+      color: #f4e1b6;
     }
     header p {
       font-size: 1.2em;
     }
     .btn {
-      background-color: #d4af37; /* gold */
+      background-color: #d4af37;
       color: black;
       padding: 15px 30px;
       text-decoration: none;
@@ -46,11 +44,10 @@
       transform: scale(1.05);
     }
 
-    /* Sections */
     .section {
       padding: 60px 20px;
       text-align: center;
-      background-color: rgba(30, 20, 20, 0.85); /* semi-transparent dark brown */
+      background-color: rgba(30, 20, 20, 0.85);
       margin: 20px auto;
       border-radius: 10px;
       max-width: 1000px;
@@ -75,7 +72,6 @@
       box-shadow: 0 5px 15px rgba(0,0,0,0.5);
     }
 
-    /* Form */
     form {
       max-width: 400px;
       margin: auto;
@@ -108,7 +104,6 @@
       transform: scale(1.05);
     }
 
-    /* Footer */
     footer {
       background: rgba(30, 20, 20, 0.9);
       color: #aaa;
@@ -145,7 +140,7 @@
 
   <div class="section" id="contact">
     <h2>Order by Email</h2>
-    <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+    <form action="YOUR_FORM_URL" method="POST">
       <label for="name">Name</label>
       <input type="text" name="name" id="name" placeholder="Enter your name" required>
 
@@ -164,6 +159,5 @@
   </footer>
 </body>
 </html>
-
 
 
