--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
       background-size: cover;
       background-repeat: no-repeat;
       background-attachment: fixed;
-      color: #f4e1b6; /* gold text */
+      color: #f4e1b6;
     }
 
     header {
       text-align: center;
       padding: 80px 20px;
       background: rgba(30, 20, 20, 0.8);
+      position: relative;
     }
+
     header h1 {
       font-size: 3em;
       margin-bottom: 10px;
@@ -28,6 +30,26 @@
     header p {
       font-size: 1.2em;
     }
+
+    /* Buttons Container */
+    .btn-container {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 20px;
+      opacity: 0;
+      transform: translateY(50px);
+      animation: slideUp 1s forwards;
+      animation-delay: 0.5s;
+    }
+
+    @keyframes slideUp {
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
     .btn {
       background-color: #d4af37;
       color: black;
@@ -36,12 +58,14 @@
       font-weight: bold;
       border-radius: 5px;
       display: inline-block;
-      margin-top: 20px;
       transition: 0.3s;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.3);
     }
+
     .btn:hover {
       background-color: #bfa137;
-      transform: scale(1.05);
+      transform: translateY(-3px) scale(1.05);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.5);
     }
 
     .section {
@@ -101,7 +125,8 @@
     }
     form button:hover {
       background-color: #bfa137;
-      transform: scale(1.05);
+      transform: translateY(-3px) scale(1.05);
+      box-shadow: 0 5px 15px rgba(0,0,0,0.4);
     }
 
     footer {
@@ -117,8 +142,12 @@
   <header>
     <h1>Premium Chess Set</h1>
     <p>Luxury handcrafted chess pieces for champions</p>
-    <!-- WhatsApp Order Button -->
-    <a href="https://wa.me/639634483871?text=Hello!%20I%20want%20to%20order%20a%20Premium%20Chess%20Set." target="_blank" class="btn">Order Now via WhatsApp</a>
+
+    <!-- Buttons with Pop-up Animation -->
+    <div class="btn-container">
+      <a href="https://wa.me/639634483871?text=Hello!%20I%20want%20to%20order%20a%20Premium%20Chess%20Set." target="_blank" class="btn">Order via WhatsApp</a>
+      <a href="#contact" class="btn">Order via Email</a>
+    </div>
   </header>
 
   <div class="section">
@@ -159,5 +188,4 @@
   </footer>
 </body>
 </html>
-
 
