--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
       text-align: center;
       padding: 80px 20px;
       background: rgba(30, 20, 20, 0.8);
-      position: relative;
     }
 
     header h1 {
@@ -29,43 +28,6 @@
     }
     header p {
       font-size: 1.2em;
-    }
-
-    /* Buttons Container */
-    .btn-container {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      margin-top: 20px;
-      opacity: 0;
-      transform: translateY(50px);
-      animation: slideUp 1s forwards;
-      animation-delay: 0.5s;
-    }
-
-    @keyframes slideUp {
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    .btn {
-      background-color: #d4af37;
-      color: black;
-      padding: 15px 30px;
-      text-decoration: none;
-      font-weight: bold;
-      border-radius: 5px;
-      display: inline-block;
-      transition: 0.3s;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-    }
-
-    .btn:hover {
-      background-color: #bfa137;
-      transform: translateY(-3px) scale(1.05);
-      box-shadow: 0 8px 20px rgba(0,0,0,0.5);
     }
 
     .section {
@@ -136,18 +98,44 @@
       padding: 20px;
       margin-top: 40px;
     }
+
+    /* Floating Buttons */
+    .floating-btn {
+      position: fixed;
+      bottom: 30px;
+      right: 30px;
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      z-index: 999;
+      animation: popIn 1s ease forwards;
+    }
+
+    @keyframes popIn {
+      from { transform: scale(0); opacity: 0; }
+      to { transform: scale(1); opacity: 1; }
+    }
+
+    .floating-btn a {
+      background-color: #d4af37;
+      color: black;
+      padding: 15px 25px;
+      border-radius: 50px;
+      font-weight: bold;
+      text-decoration: none;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+      transition: transform 0.3s, background 0.3s;
+    }
+    .floating-btn a:hover {
+      transform: scale(1.1);
+      background-color: #bfa137;
+    }
   </style>
 </head>
 <body>
   <header>
     <h1>Premium Chess Set</h1>
     <p>Luxury handcrafted chess pieces for champions</p>
-
-    <!-- Buttons with Pop-up Animation -->
-    <div class="btn-container">
-      <a href="https://wa.me/639634483871?text=Hello!%20I%20want%20to%20order%20a%20Premium%20Chess%20Set." target="_blank" class="btn">Order via WhatsApp</a>
-      <a href="#contact" class="btn">Order via Email</a>
-    </div>
   </header>
 
   <div class="section">
@@ -186,6 +174,12 @@
   <footer>
     <p>&copy; 2025 Premium Chess Set. All rights reserved.</p>
   </footer>
+
+  <!-- Floating WhatsApp & Email Buttons -->
+  <div class="floating-btn">
+    <a href="https://wa.me/639634483871?text=Hello!%20I%20want%20to%20order%20a%20Premium%20Chess%20Set." target="_blank">WhatsApp</a>
+    <a href="#contact">Email</a>
+  </div>
 </body>
 </html>
 
