--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       background-repeat: no-repeat;
       background-attachment: fixed;
       color: #f4e1b6;
+      scroll-behavior: smooth;
     }
 
     header {
@@ -31,14 +32,14 @@
       font-size: 1.2em;
     }
 
-    /* Buttons Container */
+    /* Buttons inside header */
     .btn-container {
       display: flex;
       justify-content: center;
       gap: 20px;
-      margin-top: 20px;
+      margin-top: 30px;
       opacity: 0;
-      transform: translateY(50px);
+      transform: translateY(30px);
       animation: slideUp 1s forwards;
       animation-delay: 0.5s;
     }
@@ -63,8 +64,8 @@
     }
 
     .btn:hover {
-      background-color: #bfa137;
       transform: translateY(-3px) scale(1.05);
+      background-color: #bfa137;
       box-shadow: 0 8px 20px rgba(0,0,0,0.5);
     }
 
@@ -76,6 +77,7 @@
       border-radius: 10px;
       max-width: 1000px;
     }
+
     .section h2 {
       color: #f4e1b6;
       border-bottom: 2px solid #d4af37;
@@ -83,6 +85,7 @@
       padding-bottom: 5px;
       margin-bottom: 20px;
     }
+
     .image-grid {
       display: flex;
       justify-content: center;
@@ -90,6 +93,7 @@
       gap: 20px;
       margin-top: 20px;
     }
+
     .image-grid img {
       width: 45%;
       border-radius: 10px;
@@ -101,6 +105,7 @@
       margin: auto;
       text-align: left;
     }
+
     form input, form textarea {
       width: 100%;
       padding: 12px;
@@ -110,9 +115,11 @@
       background: #3e2f2f;
       color: #f4e1b6;
     }
+
     form input::placeholder, form textarea::placeholder {
       color: #f4e1b6aa;
     }
+
     form button {
       background: #d4af37;
       color: black;
@@ -123,6 +130,7 @@
       font-weight: bold;
       transition: 0.3s;
     }
+
     form button:hover {
       background-color: #bfa137;
       transform: translateY(-3px) scale(1.05);
@@ -143,10 +151,10 @@
     <h1>Premium Chess Set</h1>
     <p>Luxury handcrafted chess pieces for champions</p>
 
-    <!-- Buttons with Pop-up Animation -->
+    <!-- Buttons back inside header -->
     <div class="btn-container">
       <a href="https://wa.me/639634483871?text=Hello!%20I%20want%20to%20order%20a%20Premium%20Chess%20Set." target="_blank" class="btn">Order via WhatsApp</a>
-      <a href="#contact" class="btn">Order via Email</a>
+      <a href="#chess-club" class="btn">Join Chess Club</a>
     </div>
   </header>
 
@@ -167,8 +175,9 @@
        ✔️ Elegant packaging — ideal for gifts</p>
   </div>
 
-  <div class="section" id="contact">
-    <h2>Order by Email</h2>
+  <div class="section" id="chess-club">
+    <h2>Join Our Chess Club</h2>
+    <p>Sign up with your email to receive updates, tips, and exclusive offers from our premium chess club.</p>
     <form action="YOUR_FORM_URL" method="POST">
       <label for="name">Name</label>
       <input type="text" name="name" id="name" placeholder="Enter your name" required>
@@ -176,10 +185,7 @@
       <label for="email">Email</label>
       <input type="email" name="_replyto" id="email" placeholder="Enter your email" required>
 
-      <label for="message">Message</label>
-      <textarea name="message" id="message" rows="4" placeholder="Your message or order details"></textarea>
-
-      <button type="submit">Send Order</button>
+      <button type="submit">Join Now</button>
     </form>
   </div>
 
@@ -188,5 +194,4 @@
   </footer>
 </body>
 </html>
-
 
