--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
   <div class="section" id="chess-club">
     <h2>Join Our Chess Club</h2>
     <p>Sign up with your email to receive updates, tips, and exclusive offers from our premium chess club.</p>
-    <form action="YOUR_FORM_URL" method="POST">
+    <form action="https://formspree.io/f/xkgvqdop" method="POST">
       <label for="name">Name</label>
       <input type="text" name="name" id="name" placeholder="Enter your name" required>
 
@@ -194,4 +194,5 @@
   </footer>
 </body>
 </html>
+
 
