--- a/index.html
+++ b/index.html
@@ -1,2 +1,104 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>NaturaBelle Cosmetics - Celebrate Your Natural Glow</title>
+  <style>
+    /* Fonts */
+    @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Open+Sans&display=swap');
 
+    :root {
+      --primary-gradient: linear-gradient(135deg, #84fab0 0%, #2d6a4f 100%);
+      --button-gradient: linear-gradient(135deg, #2d6a4f 0%, #40916c 100%);
+      --brand-font: 'Playfair Display', serif;
+      --body-font: 'Open Sans', sans-serif;
+    }
+
+    body {
+      margin: 0;
+      font-family: var(--body-font);
+      background: #f9fff9;
+      color: #333;
+      text-align: center;
+    }
+
+    header {
+      padding: 40px 20px;
+      background: var(--primary-gradient);
+      color: white;
+    }
+
+    header img {
+      max-width: 120px;
+      margin-bottom: 15px;
+    }
+
+    header h1 {
+      font-family: var(--brand-font);
+      font-size: 2.8rem;
+      margin-bottom: 10px;
+    }
+
+    header p {
+      font-size: 1.2rem;
+      opacity: 0.95;
+    }
+
+    .container {
+      max-width: 500px;
+      margin: 40px auto;
+      background: white;
+      padding: 30px;
+      border-radius: 15px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+    }
+
+    .container h2 {
+      font-family: var(--brand-font);
+      margin-bottom: 15px;
+      color: #2d6a4f;
+    }
+
+    .product-img {
+      margin: 20px 0;
+      max-width: 100%;
+      border-radius: 12px;
+      box-shadow: 0 6px 15px rgba(0,0,0,0.1);
+    }
+
+    .note {
+      font-size: 0.9rem;
+      color: #666;
+      margin-top: 15px;
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <!-- ✅ Replace with your actual logo URL -->
+    <img src="https://raw.githubusercontent.com/barriosrachelle11/practice/main/Gemini_Generated_Image_6a6w1u6ab6w1u6ab.png" alt="NaturaBelle Logo">
+    <h1>NaturaBelle Cosmetics</h1>
+    <p>✨ Celebrate Your Natural Glow ✨</p>
+  </header>
+
+  <div class="container">
+    <h2>Join Our Beauty Circle</h2>
+    <p>Get exclusive tips, natural skincare secrets, and <strong>10% off your first order</strong> when you sign up!</p>
+
+    <!-- ✅ Add Product Image -->
+    <img class="product-img" src="https://raw.githubusercontent.com/barriosrachelle11/practice/main/Gemini_Generated_Image_ed4ylged4ylged4y.png" alt="NaturaBelle Products">
+
+    <!-- ✅ Klaviyo Embedded Form -->
+    <div class="klaviyo-form-XkwEjn"></div>
+    <script src="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=XhnrUi" async></script>
+    <!-- ✅ End Klaviyo Embed -->
+
+    <p class="note">Your details are safe with us. Unsubscribe anytime.</p>
+  </div>
+
+</body>
+</html>
    
+
